--- a/build.gradle
+++ b/build.gradle
@@ -1,21 +1,9 @@
-buildscript {
-    repositories {
-        mavenLocal()
-        jcenter()
-        mavenCentral()
-        maven {
-            url 'https://plugins.gradle.org/m2/'
-        }
-    }
-    dependencies {
-        classpath 'org.springframework.boot:spring-boot-gradle-plugin:1.3.3.RELEASE'
-        classpath 'gradle.plugin.com.jamesward:atom-gradle-plugin:0.0.1'
-    }
+plugins {
+    id 'com.jamesward.atomgradleplugin' version '0.0.2'
+    id 'org.springframework.boot' version '1.5.2.RELEASE'
 }
 
 apply plugin: 'java'
-apply plugin: 'spring-boot'
-apply plugin: 'com.jamesward.atomgradleplugin'
 
 repositories {
     mavenLocal()
@@ -24,8 +12,8 @@ repositories {
 }
 
 dependencies {
-    compile 'org.springframework.boot:spring-boot-starter-web:1.3.3.RELEASE'
-    compile 'org.springframework.boot:spring-boot-devtools:1.3.3.RELEASE'
+    compile 'org.springframework.boot:spring-boot-starter-web:1.5.2.RELEASE'
+    compile 'org.springframework.boot:spring-boot-devtools:1.5.2.RELEASE'
 }
 
 allprojects {
@@ -56,11 +44,13 @@ task devBootRun(type: Exec) {
 
 import java.util.concurrent.*
 
-task dev() << {
-    def devClassesFuture = Executors.newSingleThreadExecutor().submit({ devClasses.execute() } as Callable)
-    def devBootRunFuture = Executors.newSingleThreadExecutor().submit({ devBootRun.execute() } as Callable)
-    devClassesFuture?.get()
-    devBootRunFuture?.get()
+task dev {
+    doLast {
+        def devClassesFuture = Executors.newSingleThreadExecutor().submit({ devClasses.execute() } as Callable)
+        def devBootRunFuture = Executors.newSingleThreadExecutor().submit({ devBootRun.execute() } as Callable)
+        devClassesFuture?.get()
+        devBootRunFuture?.get()
+    }
 }
 
 tasks.dev.dependsOn tasks.atom
